Renamed project name & function names to eqHeight

--- a/demo.html
+++ b/demo.html
@@ -18,10 +18,10 @@ h1
 </style>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="jquery.equalheight.js"></script>
+<script src="jquery.eqheight.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-    $(".row").equalHeight(".column");
+    $(".row").eqHeight(".column");
 });
 </script>
 
