Update index.html: added ShareThis buttons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "7d2a4a27-8a7a-4835-9bd1-7ff4e42b18fb", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+
   </head>
   <body>
 
