--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         <ul></ul>
       </nav>
       <section>
+
+<span class='st_facebook_vcount' displayText='Facebook'></span>
+<span class='st_googleplus_vcount' displayText='Google +'></span>
+<span class='st_twitter_vcount' displayText='Tweet'></span>
+<span class='st_linkedin_vcount' displayText='LinkedIn'></span>
+<span class='st_email_vcount' displayText='Email'></span>
+<span class='st_sharethis_vcount' displayText='ShareThis'></span>
+
         <h1>eqHeight.coffee</h1>
 
 <p><strong>eqHeight.coffee</strong> is a jQuery plugin that stretches fluid columns to equal height. It is originally designed to be used in responsive web design.</p>
