--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
       </nav>
       <section>
 
-<span class='st_facebook_vcount' displayText='Facebook'></span>
-<span class='st_googleplus_vcount' displayText='Google +'></span>
-<span class='st_twitter_vcount' displayText='Tweet'></span>
-<span class='st_linkedin_vcount' displayText='LinkedIn'></span>
-<span class='st_email_vcount' displayText='Email'></span>
-<span class='st_sharethis_vcount' displayText='ShareThis'></span>
+<p align="text-align: right;">
+<span class='st_facebook_large' displayText='Facebook'></span>
+<span class='st_googleplus_large' displayText='Google +'></span>
+<span class='st_twitter_large' displayText='Tweet'></span>
+<span class='st_sharethis_large' displayText='ShareThis'></span>
+<span class='st_linkedin_large' displayText='LinkedIn'></span>
+<span class='st_email_large' displayText='Email'></span>
+</p>
 
         <h1>eqHeight.coffee</h1>
 
