--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       </nav>
       <section>
 
-<p align="text-align: right;">
-<span class='st_facebook_large' displayText='Facebook'></span>
-<span class='st_googleplus_large' displayText='Google +'></span>
-<span class='st_twitter_large' displayText='Tweet'></span>
-<span class='st_sharethis_large' displayText='ShareThis'></span>
-<span class='st_linkedin_large' displayText='LinkedIn'></span>
-<span class='st_email_large' displayText='Email'></span>
-</p>
+<div style="float: right; clear: right;">
+<span class='st_facebook' displayText='Facebook'></span>
+<span class='st_googleplus' displayText='Google +'></span>
+<span class='st_twitter' displayText='Tweet'></span>
+<span class='st_linkedin' displayText='LinkedIn'></span>
+<span class='st_sharethis' displayText='ShareThis'></span>
+<span class='st_email' displayText='Email'></span>
+</div>
 
         <h1>eqHeight.coffee</h1>
 
