--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       </nav>
       <section>
 
-<div style="float: right; clear: right;">
+<p style="text-align: right;">
 <span class='st_facebook' displayText='Facebook'></span>
 <span class='st_googleplus' displayText='Google +'></span>
 <span class='st_twitter' displayText='Tweet'></span>
 <span class='st_linkedin' displayText='LinkedIn'></span>
 <span class='st_sharethis' displayText='ShareThis'></span>
 <span class='st_email' displayText='Email'></span>
-</div>
+</p>
 
         <h1>eqHeight.coffee</h1>
 
