--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <script type="text/javascript">var switchTo5x=true;</script>
     <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">stLight.options({publisher: "7d2a4a27-8a7a-4835-9bd1-7ff4e42b18fb", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-
+    <script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>
   </head>
   <body>
 
@@ -43,16 +42,6 @@
         <ul></ul>
       </nav>
       <section>
-
-<p style="text-align: right;">
-<span class='st_facebook' displayText='Facebook'></span>
-<span class='st_googleplus' displayText='Google +'></span>
-<span class='st_twitter' displayText='Tweet'></span>
-<span class='st_linkedin' displayText='LinkedIn'></span>
-<span class='st_sharethis' displayText='ShareThis'></span>
-<span class='st_email' displayText='Email'></span>
-</p>
-
         <h1>eqHeight.coffee</h1>
 
 <p><strong>eqHeight.coffee</strong> is a jQuery plugin that stretches fluid columns to equal height. It is originally designed to be used in responsive web design.</p>
@@ -229,5 +218,11 @@ We'll demonstrate some of them here.</p>
             } catch(err) {}
           </script>
 
-  </body>
+<script type="text/javascript">stLight.options({publisher: "7d2a4a27-8a7a-4835-9bd1-7ff4e42b18fb", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<script>
+var options={ "publisher": "7d2a4a27-8a7a-4835-9bd1-7ff4e42b18fb", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "googleplus", "twitter", "linkedin", "email", "sharethis"]}};
+var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
+</script>
+
+</body>
 </html>
