--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ We'll demonstrate some of them here.</p>
 
 <script type="text/javascript">stLight.options({publisher: "7d2a4a27-8a7a-4835-9bd1-7ff4e42b18fb", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 <script>
-var options={ "publisher": "7d2a4a27-8a7a-4835-9bd1-7ff4e42b18fb", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "googleplus", "twitter", "linkedin", "email", "sharethis"]}};
+var options={ "publisher": "7d2a4a27-8a7a-4835-9bd1-7ff4e42b18fb", "position": "right", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "googleplus", "twitter", "linkedin", "email", "sharethis"]}};
 var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
 </script>
 
