Added demo link to index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section>
         <h1>eqHeight.coffee</h1>
 
-<p><strong>eqHeight.coffee</strong> is a jQuery plugin that stretches fluid columns to equal height. It is originally designed to be used in responsive web design.</p>
+<p><strong>eqHeight.coffee</strong> is a jQuery plugin that stretches fluid columns to equal height. It is originally designed to be used in responsive web design. A <a href="demo.html">live demo</a> is available.</p>
 
 <p>With eqHeight applied, floating columns in the same row container are always stretched to the height of the tallest one.
 For better visual experience on mobile devices, eqHeight adjusts column heights as window resizes.
