--- a/demo.html
+++ b/demo.html
@@ -114,7 +114,7 @@
 </pre></div>
 
         <h2>Before eqHeight.coffee</h2>
-        Columns align to contents and thus their heights are inequal.
+        Columns align to contents and thus their heights are unequal.
         <div class="row clearfix">
             <div class="column">
                 <p>Line 1</p>
