--- a/demo.html
+++ b/demo.html
@@ -69,7 +69,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="http://jsliang.github.com/eqHeight.coffee" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="http://jsliang.github.com/eqHeight.coffee" class="button fork"><strong>&lt;&lt; Back</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
