--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ eqHeight selects the top level children of row containers as columns by default.
 <p>You can use eqHeight with existing responsive grid systems that have similar structures.
 We'll demonstrate some of them here.</p>
 
-<h4>Using Twitter Bootstrap</h4>
+<h4>Twitter Bootstrap</h4>
 
 <p>If you're using <a href="http://twitter.github.com/bootstrap">Twitter Bootstrap</a>, the idea is the same:</p>
 
@@ -150,7 +150,7 @@ We'll demonstrate some of them here.</p>
 <span class="nt">&lt;/script&gt;</span>
 </pre></div>
 
-<h4>Using Responsive GS</h4>
+<h4>Responsive GS</h4>
 
 <p>A sample for using <a href="http://responsive.gs/">Responsive GS</a> with eqHeight.coffee:</p>
 
@@ -180,6 +180,11 @@ We'll demonstrate some of them here.</p>
 <span class="p">});</span>
 <span class="nt">&lt;/script&gt;</span>
 </pre></div>
+
+<h4>Responsive-SASS-Grid</h4>
+
+<p>A live demo using <a href="https://github.com/carlopogus/Responsive-SASS-Grid">carlopogus/Responsive-SASS-Grid</a> with eqHeight.coffee can be found <a href="http://jsliang.com/Responsive-SASS-Grid/">here</a>.
+See <a href="https://github.com/jsliang/eqHeight.coffee/issues/2">issue #2</a> for more details.</p>
 
 <h2>Any Comments?</h2>
 
