--- a/demo.html
+++ b/demo.html
@@ -233,7 +233,7 @@
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("UA-37740364-1");
+              var pageTracker = _gat._getTracker("302519554");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
